--- a/Project.toml
+++ b/Project.toml
@@ -5,9 +5,11 @@ version = "1.0.1"
 
 [deps]
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 XMLDict = "228000da-037f-5747-90a9-8195ccbf91a5"
 
 [compat]
-julia = "^1.6"
 HDF5 = "^0.15.6"
 XMLDict = "^0.4.1"
+julia = "^1.6"
