--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,9 @@
 name = "SeisSolXDMF"
 uuid = "fc3049fc-4624-4ea9-a8a9-22daae44174f"
-authors = ["Maximilian Schmeller <m.schmeller@tum.de>"]
-version = "1.0.1"
+authors = [
+    "Lukas Krenz <lukas.krenz@in.tum.de>",
+    "Maximilian Schmeller <m.schmeller@tum.de>"]
+version = "1.1.0"
 
 [deps]
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
